--- a/src/img/icon/manifest.json
+++ b/src/img/icon/manifest.json
@@ -2,12 +2,12 @@
 	"name": "Pollistics",
 	"icons": [
 		{
-			"src": "\/src\/img\/icon\/android-chrome-192x192.png",
+			"src": "https:\/\/style.pollistics.com\/src\/img\/icon\/android-chrome-192x192.png",
 			"sizes": "192x192",
 			"type": "image\/png"
 		},
 		{
-			"src": "\/src\/img\/icon\/android-chrome-512x512.png",
+			"src": "https:\/\/style.pollistics.com\/src\/img\/icon\/android-chrome-512x512.png",
 			"sizes": "512x512",
 			"type": "image\/png"
 		}
